--- a/src/components/css/ListCar.css
+++ b/src/components/css/ListCar.css
@@ -1,20 +1,18 @@
 .listCar {
   display: flex;
-  flex-flow: row wrap;
-  justify-content: space-around;
-  align-items: flex-start;
+  flex-direction: row;
+  flex-wrap: wrap;
   padding: 0px;
-  position: absolute;
+  margin-top: 100px;
+  margin-left: 25px;
   width: 1047px;
-  height: 514px;
-  margin-top: 377px;
 }
 
 .listCar .cardMobil {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
   padding: 24px;
+  margin-left: 16px;
   width: 333px;
   height: 514px;
   left: 0px;
@@ -24,8 +22,12 @@
   border-radius: 8px;
 }
 
+.listCar .cardMobil:nth-child(4) {
+  margin-top: 20px;
+}
+
 .listCar .cardMobil:last-child {
-    margin-block-start: 20px;
+    margin-top: 20px;
 }
 
 .listCar .cardMobil .frameCard {
@@ -89,21 +91,4 @@
   line-height: 20px;
   margin-bottom: 0;
   margin-left: 8.83px;
-}
-
-.listCar .cardMobil .frameCard .buttonCard {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  width: 285px;
-  height: 48px;
-  border: none;
-  background: #5cb85f;
-  border-radius: 2px;
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 20px;
-  color: #fff;
-  margin-top: 24px;
 }
